tests/fixtures/errors/undefined_variable.gbl
import io;

func main() {
    io.println(x);  // error: undefined variable
}
